JumpScript/tests/baselines/reference/parserComputedPropertyName37.errors.txt
tests/cases/conformance/parser/ecmascript6/ComputedPropertyNames/parserComputedPropertyName37.jump(2,6): error TS2304: Cannot find name 'public'.


==== tests/cases/conformance/parser/ecmascript6/ComputedPropertyNames/parserComputedPropertyName37.jump (1 errors) ====
    var v = {
        [public]: 0
         ~~~~~~
!!! error TS2304: Cannot find name 'public'.
    };